--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,6 @@ build:
 deploy:
   stage: deploy
   script:
-    - scp -r * root@15.207.56.8:/var/www/html/sky2git/sky2c
+    - scp -r -P 2224 * root@15.207.56.8:/var/www/html/sky2git/sky2c
   only:
     - main
