--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,13 @@
 stages:
-  - build
   - deploy
-
-build:
-  stage: build
-  script:
-    - echo "Building your application..."
 
 deploy:
   stage: deploy
   script:
+    - mkdir -p ~/.ssh
+    - touch ~/.ssh/known_hosts
+    - ssh-keyscan -p 2224 15.207.56.8 >> ~/.ssh/known_hosts
+    - chmod 600 ~/.ssh/known_hosts
     - scp -r -P 2224 * root@15.207.56.8:/var/www/html/sky2git/sky2c
   only:
     - main
