--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,6 @@ stages:
 deploy:
   stage: deploy
   script:
-    - mkdir -p ~/.ssh
-    - touch ~/.ssh/known_hosts
-    - ssh-keyscan -p 2224 15.207.56.8 >> ~/.ssh/known_hosts
-    - chmod 644 ~/.ssh/known_hosts
-    - scp -r -P 2224 * root@15.207.56.8:/var/www/html/sky2git/sky2c
+    - scp -i ~/.ssh/id_rsa -v -r -P 2224 * root@15.207.56.8:/var/www/html/sky2git/sky2c
   only:
     - main
