--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,6 @@ stages:
 deploy:
   stage: deploy
   script:
-    - scp -i * root@15.207.56.8:/var/www/html/sky2git/sky2c
+    - scp -r * root@15.207.56.8:/var/www/html/sky2git/sky2c
   only:
     - main
