--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,10 @@ deploy:
     - apt-get update -qy
     - apt-get install -y openssh-client rsync
 
+    # Create SSH directory if it doesn't exist
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+
     # Set up SSH key
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
