--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,10 @@ deploy:
 
     # Copy files to remote server
     - rsync -e "ssh -p 2224" -r --delete-after --exclude=".git" ./ root@15.207.56.8:/var/www/html/sky2clive
+    
+    # SSH into remote server (if needed)
+    # Use this step if you want to execute commands on the remote server after deployment
+    - ssh -p 2224 root@15.207.56.8
 
   only:
     - main
